# django-provost

./: GAMEPLAN.md  LICENSE  README.md  manage.py  requirements.txt
core/: README.md  factory.py  settings.py  urls.py  views.py
core/management/commands/: populate.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  models.py
core/static/css/: global.css
core/templates/core/: base.html  home.html  post_detail.html  post_list.html
provost/: LICENSE  README.md  __init__.py  apps.py  backends.py  settings.py  setup.cfg  urls.py
provost/models/: models.py
provost/tests/: tests.py
